--- a/resources/assets/sass/citeup/_front.scss
+++ b/resources/assets/sass/citeup/_front.scss
@@ -57,6 +57,7 @@ $content-min-height: 615px;
 }
 
 @import "front/nav";
+@import "front/footer";
 @import "front/landing";
 @import "front/about";
 @import "front/activities";
