--- a/resources/assets/sass/citeup/front/_activities.scss
+++ b/resources/assets/sass/citeup/front/_activities.scss
@@ -9,6 +9,7 @@
     }
     
     .page-title {
+        text-align: center;
         font-weight: 300;
     }
 
@@ -143,6 +144,10 @@
     }
 
     @media (min-width: $screen-md-min) {
+    
+        .page-title {
+            text-align: left;
+        }
         
         .col-right-side {
             margin-top: 0;
