--- a/resources/assets/sass/citeup/front/_faqs.scss
+++ b/resources/assets/sass/citeup/front/_faqs.scss
@@ -1,6 +1,8 @@
 
 #faqs-page {
 
+    text-align: center;
+
     // min-height: 100%;
 
     .page-title-container {
@@ -50,6 +52,10 @@
         font-size: 18pt;
         font-weight: 300;
         margin-bottom: 10px;
+    }
+
+    @media (min-width: $screen-sm-min) {
+        text-align: left;
     }
 
 }
