--- a/resources/assets/sass/citeup/front/landing/_about.scss
+++ b/resources/assets/sass/citeup/front/landing/_about.scss
@@ -2,12 +2,24 @@
 #front-about {
     background-color: $signature-light;
     color: $light-text-color;
-    padding: 50px 0 70px;
+    padding: 25px 0;
 
     p {
-        // font-family: $title-font-family;
-        font-size: 24pt;
+        font-size: 16pt;
         font-weight: 700;
         text-transform: uppercase;
+    }
+
+    @media (min-width: $screen-xs-min) {
+        
+        padding: 30px 0 40px;
+
+        p {
+            font-size: 24pt;
+        }
+    }
+
+    @media (min-width: $screen-sm-min) {
+        padding: 50px 0 70px;
     }
 }
