--- a/resources/assets/sass/citeup/front/landing/_map.scss
+++ b/resources/assets/sass/citeup/front/landing/_map.scss
@@ -18,9 +18,9 @@
     .map-info {
         position: absolute;
         z-index: 99;
-        width: 200px;
+        width: 185px;
         margin-top: -220px;
-        margin-left: 35px;
+        margin-left: 30px;
         background: $signature-dark;
         color: $light-text-color;
         border: 1px solid darken($signature-dark, 4%);
@@ -42,6 +42,15 @@
 
     .go-to-location {
         color: $light-text-color !important;
+    }
+
+    @media (min-width: $screen-xs-min) {
+
+        .map-info {
+            width: 200px;
+            margin-left: 35px;
+        }
+
     }
 
     @media (min-width: $screen-sm-min) {
