--- a/resources/assets/sass/citeup/front/landing/_prizes.scss
+++ b/resources/assets/sass/citeup/front/landing/_prizes.scss
@@ -2,7 +2,7 @@
 #front-prizes {
     background: $signature-lighter;
     overflow-y: visible;
-    height: 880px;
+    height: 700px;
 
     .container-container {
         position: absolute;
@@ -12,7 +12,7 @@
     }
 
     .panel-prizes {
-        margin: 5px 25px 0;
+        margin: 5px 12px 0;
         border: none;
         box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
     }
@@ -27,12 +27,16 @@
 
         h3 {
             margin: 0 0 30px;
-            font-size: 14pt;
+            font-size: 10pt;
             color: $signature-dark;
         }
 
         &:first-child {
-            border-right: 1px solid #ddd;
+            border-right: none;
+        }
+
+        &:last-child {
+            border-top: 1px solid #ddd;
         }
 
         .prize-wrapper {
@@ -41,32 +45,78 @@
 
         .prize-place {
             font-weight: 700;
-            font-size: 14pt;
+            font-size: 9pt;
             text-transform: uppercase;
         }
 
         .prize-qty {
             margin: 4px 0;
-            font-size: 22pt;
+            font-size: 14pt;
             font-weight: 300;
         }
     }
 
     .prizes-title {
         font-weight: 700;
-        font-size: 18pt;
+        font-size: 10pt;
         text-transform: uppercase;
     }
 
     .total-prizes {
-        font-size: 24pt;
+        font-size: 16pt;
         font-weight: 300;
         margin: 12px 0;
+    }
+
+    @media (min-width: $screen-xs-min) {
+        
+        height: 880px;
+
+        .prizes-list-item {
+
+            h3 {
+                font-size: 14pt;
+            }
+
+            .prize-place {
+                font-size: 14pt;
+            }
+
+            .prize-qty {
+                font-size: 22pt;
+            }
+
+        }
+
+        .panel-prizes {
+            margin: 0 20px 0;
+        }
+
+        .prizes-title {
+            font-size: 18pt;
+        }
+
+        .total-prizes {
+            font-size: 24pt;
+        }
+
     }
 
     @media (min-width: $screen-sm-min) {
         
         height: 590px;
+
+        .prizes-list-item {
+
+            &:first-child {
+                border-right: 1px solid #ddd;
+            }
+
+            &:last-child {
+                border-top: none;
+            }
+
+        }
 
         .panel-prizes {
             margin-top: 30px;
