--- a/resources/assets/sass/citeup/front/_about.scss
+++ b/resources/assets/sass/citeup/front/_about.scss
@@ -10,6 +10,7 @@
     .page-title {
         color: #fff;
         font-weight: 700;
+        font-size: 22.5pt;
     }
 
     .content-container {
@@ -26,6 +27,7 @@
     .panel-content {
         @extend %no-border-radius;
         border: none;
+        font-size: 8.75pt;
         margin-bottom: 20px;
         box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
 
@@ -45,6 +47,7 @@
 
         h2 {
             margin: 0;
+            font-size: 18pt;
             font-weight: 300;
             padding-top: 30px;
             padding-bottom: 20px;
@@ -55,6 +58,7 @@
         }
 
         ul {
+            padding-left: 20px;
 
             li {
                 margin-bottom: 10px;
@@ -101,7 +105,7 @@
     }
 
     .logo-up-container {
-        margin-top: 40px;
+        margin-top: 10px;
         margin-bottom: 70px;
 
         p {
@@ -111,9 +115,39 @@
         }
 
         .logo-up {
-            height: 125px;
-            margin: 0 15px;
+            height: 100px;
+            margin: 15px 0;
         }
+    }
+
+    @media (min-width: $screen-xs-min) {
+        
+        .page-title {
+            font-size: 27pt;
+        }
+
+        .panel-content {
+            font-size: 10.5pt;
+
+            h2 { 
+                font-size: 22.5pt;
+            }
+
+            ul {
+                padding-left: 40px;
+            }
+        }
+
+        .logo-up-container {
+            
+            margin-top: 40px;
+
+            .logo-up {
+                height: 125px;
+                margin: 0 15px;
+            }
+        }
+
     }
 
 }
