--- a/resources/assets/sass/citeup/front/_footer.scss
+++ b/resources/assets/sass/citeup/front/_footer.scss
@@ -14,6 +14,7 @@
 
     .middle-yard {
         padding-top: 10px;
+        font-size: 9pt;
 
         h3 {
             margin: 0 0 10px;
@@ -58,6 +59,10 @@
     }
 
     @media (min-width: $screen-xs-min) {
+
+        .middle-yard {
+            font-size: 10.5pt;
+        }
 
         .footer-links {
             
