--- a/resources/assets/sass/citeup/front/landing/_news.scss
+++ b/resources/assets/sass/citeup/front/landing/_news.scss
@@ -20,6 +20,7 @@
 
         .img-placeholder {
             width: 100%;
+            height: 125px;
             margin-bottom: 10px;
             display: block;
             overflow: hidden;
